# zfs-snappers

./: Cargo.toml  LICENSE.md  README.md
etc/: zfs-snappers
src/: main.rs  zfs.rs
