[package]
name = "zfs-autosnaprs"
version = "0.3.0"
authors = ["Micha Glave <coding@migmedia.de>"]
edition = "2021"
description = "zfs-auto-snapshot tool written in Rust."
license = "MIT"

[dependencies]
simplelog = "0.12.0"
clap = { version = "3.2.4", features = ["derive"] }
log = "0.4.17"
chrono = "0.4.19"

[[bin]]
name = "zfs-autosnaprs"
path = "src/main.rs"
