[package]
name = "zfs-snappers"
version = "0.3.2"
authors = ["Micha Glave <coding@migmedia.de>"]
edition = "2021"
description = "ZFS snapshot handling util."
license = "MIT"

[dependencies]
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"

[[bin]]
name = "zfs-snappers"
path = "src/main.rs"
